--- a/components/HomePageCSS/dashProfile.module.css
+++ b/components/HomePageCSS/dashProfile.module.css
@@ -1,7 +1,7 @@
 .container{
     width: 280px;
     height: 120px;
-    background-color: #1C1E20;
+    background-color: #111115; 
     border-radius: 10px;
     display: flex;
     flex-direction: row;
@@ -29,4 +29,13 @@
 .profileDetails > p{
     font-size: 14px;
     color:#68696A;
+}
+
+.Links{
+    text-decoration: none;
+    color: inherit;
+}
+
+.Links:visited{
+    color: inherit;
 }
