--- a/components/HomePageCSS/topPannel.module.css
+++ b/components/HomePageCSS/topPannel.module.css
@@ -1,9 +1,9 @@
 .sidePanel {
     height:50px;
-    width: 95%;
-    background-color: #1c1f21;
-   margin: auto;
-    border-radius: .6rem;
+    width: 100%;
+    background-color: #111115;
+    margin: auto;
+    /* border-radius: .6rem; */
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
@@ -42,7 +42,7 @@
   }
   .cat{
     padding: 5px 20px;
-    background-color: #1C1E20;
+    background-color: #111115;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -58,7 +58,7 @@
   .search{
     width: 300px;
     height: 50px;
-    background-color: #1C1E20;
+    background-color: #111115;
     display: flex;
     align-items: center;
     border-radius: 25px;
@@ -92,12 +92,14 @@
     width: min(100vw, 1400px);
     margin: auto;
     overflow-x: auto;
+    padding-bottom: 20px;
+
   }
 
   .data td{
     font-size: min(3vw, 12px);
     text-align: center;
-
+    padding:10px;
   }
 
   .data{
@@ -109,12 +111,15 @@
     width: 20%;
     padding: 12px 0;
     background-color: #111115;
+    border-bottom: 1px solid #2e393a;
+    border-right: 1px solid #2e393a;
     font-size: min(3vw, 15px);
 
   }
 
   .headingNames td{
     font-size: min(3vw, 15px);
+   
   }
   .subHeadings td {
     padding: 14px;
@@ -129,8 +134,12 @@
     margin: 0;
     padding:12px;
   }
+
+
   .subHeadings{
-    background: #111115;
+
+    border-bottom: 1px solid #2e393a;
+    border-right: 1px solid #2e393a;
   }
 
   .DownloadActions{
@@ -141,7 +150,11 @@
     justify-content: space-between;
   }
   .buttons{
-    padding: 2px 18px;
+    padding: 0px 18px;
     background: #111115;
     border-radius: 5px;
   }
+
+
+  /* //////////////////////// */
+
