--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap');
+
 body{
   width: min(100vw, 1440px);
   background: #040408;
@@ -5,6 +7,7 @@ body{
   box-sizing: border-box;
   position: relative;
   overflow-x: hidden;
+  font-family: 'Inter', sans-serif;
 }
 
 ::-webkit-scrollbar {
