--- a/components/HomePageCSS/topPannel.module.css
+++ b/components/HomePageCSS/topPannel.module.css
@@ -159,3 +159,28 @@
 
   /* //////////////////////// */
 
+  .SelectorCont{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    justify-content: center;
+}
+
+.Select{
+    padding: 7px 20px;
+    width: min(480px, 40vw);
+    height: 60px;
+    outline: none;
+    border: none;
+    border-radius: 4px;
+    background-color: #111115;
+    border: none;
+    outline: none;
+}
+
+.selector{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px;
+}
