--- a/components/Settings/SettingsCSS/settingsCat.module.css
+++ b/components/Settings/SettingsCSS/settingsCat.module.css
@@ -10,17 +10,24 @@
     margin-left: 50px;
     font-size: min(3vw, 14px);
     cursor: pointer;
+    position: relative;
 }
 
 .Container p{
     font-size: min(3vw, 15px);
     margin: 0;
+    color: #ffffff;
 }
+
 
 .Cont{
     margin: 0;
     display: flex;
     flex-direction: row;
+    position: relative;
+} 
+.Cat:hover .Cont{
+    cursor: pointer;
 }
 .Cat{
     width: fit-content;
