--- a/components/Settings/SettingsCSS/settingsCat.module.css
+++ b/components/Settings/SettingsCSS/settingsCat.module.css
@@ -3,20 +3,22 @@
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-    width: 240px;
-    height: 100px;
+    width: 290px;
+    height: 140px;
     background: #111115;
-    border-radius: 5px;
+    border-radius: 8px;
     margin-left: 50px;
     font-size: min(3vw, 14px);
     cursor: pointer;
     position: relative;
+    text-decoration: none;
 }
 
-.Container p{
+.Container .Name{
     font-size: min(3vw, 15px);
     margin: 0;
     color: #ffffff;
+  
 }
 
 
@@ -36,8 +38,8 @@
     
 }
 .Icon{
-    width: 30px;
-    height: 28px;
+    width: 40px;
+    height: 40px;
     background: transparent;
     position: relative;
 }
