--- a/app/globals.css
+++ b/app/globals.css
@@ -4,6 +4,7 @@ body{
   width: min(100vw, 1440px);
   background: #040408;
   margin: auto;
+  padding: 0;
   box-sizing: border-box;
   position: relative;
   overflow-x: hidden;
