--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,6 +1,6 @@
 .sidePanel {
-  height: min(85vh, 800px);
-  width: min(5vw, 109px) ;
+  height: min(85vh, 500px);
+  width: min(4vw, 106px) ;
   background-color: #111115;
   border-radius: .6rem;
   display: flex;
@@ -13,8 +13,8 @@
   margin-left: 10px;
 }
 .sideIcon{
-  width: min(25px , 2vw);
-  height:  min(25px , 2vw);
+  width: min(20px , 5vw);
+  height:  min(20px , 5vw);
   background: transparent;
   margin: 20px 0;
   position: relative;
@@ -127,21 +127,64 @@
   margin-top: 50px;
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
-
+  justify-content: space-evenly;
 }
 .cat{
-  height: 50px;
-  width: 100px;
+  width: min(100px, 30vw);
   background-color: #111115;
   display: flex;
   justify-content: center;
   align-items: center;
   border-radius: 25px;
   cursor: pointer;
+  margin: 5px;
+  padding: 5px;
 }
 
 .cat > p{
-  font-size: 12px;
+  font-size: min(12px, 2vw);
 }
 
+@media (max-width: 1240px) {
+ .container{
+  flex-direction: column;
+  align-items: center;
+  margin: auto;
+  width: 95vw;
+ }
+ .sidePanel {
+  height:60px;
+  width: 100%;
+  background-color: #111115;
+  /* border-radius: .6rem; */
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  margin:auto;
+  margin-top: 20px;
+  padding: 0;
+}
+
+.searchContainer{
+  width: 95%;
+  background-color: #111115;
+  border-radius: .6rem;
+  margin:auto;
+  margin-top: 20px;
+}
+.categories{
+  display: flex;
+  flex-direction: row;
+  width: 90vw;
+  justify-content: left;
+  margin: auto;
+  margin-top: 20px;
+  
+}
+.nav{
+  width: 100vw;
+  margin: 0;
+  padding: 0;
+}
+}
