--- a/components/Updates/UpdatesCSS/home.module.css
+++ b/components/Updates/UpdatesCSS/home.module.css
@@ -3,23 +3,31 @@
     flex-direction: row;
 }
 .container .cont{
-    width: 100%;
+    width: 97%;
+    margin: auto;
 }
 .content{
     flex-direction: row;
     display: flex;
     flex-wrap: wrap;
+    width: 90%;
+    margin: auto;
+    align-items: center;
 }
 .postButton{
-    width: 20%;
-    height: 80px;
+    width: min(170px, 60vw);
+    height: 50px;
     background: #111115;
     margin-top: 30px;
-    border-radius: 10px;
+    border-radius: 5px;
     display: flex;
     align-items: center;
-    padding-left: 20px;
+    padding:0 15px;
     cursor: pointer;
+}
+
+.postButton p {
+    font-size: min(14px, 3vw);
 }
 
 .sideIcon{
@@ -80,4 +88,15 @@
     flex-direction: row;
     align-items: flex-end;
     justify-content: flex-end;
+  }
+
+  @media (max-width: 1240px){
+    .container{
+        flex-direction: column;
+        align-items: center;
+        margin: auto;
+        width: 95vw;
+        justify-content: center;
+       }
+      
   }
