--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap');
 
+
+
+* {
+  user-select: none;
+}
 body{
   width: min(100vw, 1440px);
   background: #040408;
@@ -9,6 +14,7 @@ body{
   position: relative;
   overflow-x: hidden;
   font-family: 'Inter', sans-serif;
+  color: #fff;
 }
 
 ::-webkit-scrollbar {
