--- a/components/HomePageCSS/topPannel.module.css
+++ b/components/HomePageCSS/topPannel.module.css
@@ -55,7 +55,7 @@
   }
   
   .cat > p, .search > p{
-    font-size: min(2vw, 12px);
+    font-size: min(2.4vw, 12px);
   }
   .search{
     width: 300px;
@@ -148,16 +148,27 @@
   .DownloadActions{
     display: flex;
     flex-direction: row;
-    width: 95%;
-    margin: 20px auto 30px auto;
+    width: 90%;
+    margin: 40px auto 10px auto;
     justify-content: space-between;
   }
   .buttons{
-    padding: 0px 18px;
+    padding: 0px 15px;
     background: #111115;
     border-radius: 5px;
+    font-size: min(13px, 4vw);
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    cursor: pointer;
+   
   }
-
+.buttons:active{
+  background: #68696A;
+}
+  .Date{
+    font-size: min(13px, 4vw);
+  }
 
   /* //////////////////////// */
 
@@ -184,5 +195,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 10px;
+    padding: 5px;
+}
+
+.selector p{
+  font-size: min(10px, 4vw);
 }
