--- a/components/Settings/SettingsCSS/homestyles.module.css
+++ b/components/Settings/SettingsCSS/homestyles.module.css
@@ -20,3 +20,13 @@
     text-align: center;
     margin-left: 30px;
 }
+
+
+@media (max-width: 1240px) {
+    .container{
+     flex-direction: column;
+     align-items: center;
+     margin: auto;
+     width: 95vw;
+    }
+}
