--- a/components/Settings/SettingsCSS/settingsCat.module.css
+++ b/components/Settings/SettingsCSS/settingsCat.module.css
@@ -7,11 +7,11 @@
     height: 140px;
     background: #111115;
     border-radius: 8px;
-    margin-left: 50px;
     font-size: min(3vw, 14px);
     cursor: pointer;
     position: relative;
     text-decoration: none;
+    margin: 5px;
 }
 
 .Container .Name{
@@ -27,6 +27,8 @@
     display: flex;
     flex-direction: row;
     position: relative;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
 } 
 .Cat:hover .Cont{
     cursor: pointer;
