--- a/src/components/Settings/SettingsCSS/add-member.module.css
+++ b/src/components/Settings/SettingsCSS/add-member.module.css
@@ -70,11 +70,14 @@
 
   .addNew{
     margin-top: 30px;
+    margin-bottom: 60px;
     width: 100%;
     text-align: center;
     position: relative;
   }
-
+.addNew button{
+    border: none;
+}
   .buttons{
     position: absolute;
     right: 30px;
@@ -125,7 +128,7 @@
 }
 .containerProfile{
     width: 280px;
-    height: 120px;
+    height: 140px;
     background-color: #111115; 
     border-radius: 10px;
     display: flex;
@@ -135,6 +138,7 @@
     margin-right: 20px;
     margin-bottom: 20px;
     padding-left: 10px;
+    position: relative;
 }
 
 .profileImage{
@@ -162,4 +166,22 @@
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
+}
+
+.profileDetails h4{
+    text-transform: uppercase;
+    margin-bottom: 10px;
+}
+
+.delete{
+    margin: 0;
+    font-size: min(10px, 3vw);
+    padding: 5px;
+    background: #171a1d;
+    width: 40px;
+    text-align: center;
+    position: absolute;
+    right: 8px;
+    top: 4px;
+    border-radius: 5px;
 }
