--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,6 +1,6 @@
 .sidePanel {
   height: min(85vh, 500px);
-  width: min(4vw, 106px) ;
+  width: min(4vw, 106px);
   background-color: #111115;
   border-radius: .6rem;
   display: flex;
@@ -12,14 +12,16 @@
   margin-right: 30px;
   margin-left: 10px;
 }
-.sideIcon{
-  width: min(20px , 5vw);
-  height:  min(20px , 5vw);
+
+.sideIcon {
+  width: min(20px, 5vw);
+  height: min(20px, 5vw);
   background: transparent;
   margin: 20px 0;
   position: relative;
 }
-.searchIcon{
+
+.searchIcon {
   width: min(20px, 4vw);
   height: min(20px, 4vw);
   background: transparent;
@@ -28,7 +30,8 @@
   margin-left: 20px;
 
 }
-.searchBar > input{
+
+.searchBar>input {
   width: 95%;
   height: 75%;
   background: transparent;
@@ -36,14 +39,17 @@
   border: none;
   margin-left: 10px;
 }
-.searchBar > input::placeholder{
+
+.searchBar>input::placeholder {
   color: #68696A;
 }
-.sideIcon:hover{
+
+.sideIcon:hover {
   cursor: pointer;
   border-radius: 100px;
 }
-.searchContainer{
+
+.searchContainer {
   width: 95%;
   height: 200px;
   background-color: #111115;
@@ -51,7 +57,8 @@
   margin-right: 20px;
   margin-top: 20px;
 }
-.container{
+
+.container {
   position: relative;
   width: 100%;
   display: flex;
@@ -59,7 +66,8 @@
   justify-content: space-evenly;
 
 }
-.nav{
+
+.nav {
   width: 90%;
   display: flex;
   margin-top: 20px;
@@ -67,7 +75,8 @@
   margin: 0;
   flex-direction: column;
 }
-.nameHolder{
+
+.nameHolder {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -75,7 +84,7 @@
   margin-top: 20px;
 }
 
-.imageHolder{
+.imageHolder {
   border-radius: 100%;
   width: 80px;
   height: 80px;
@@ -87,22 +96,25 @@
   margin-right: 10px;
 }
 
-.name{
+.name {
   flex-direction: column;
   display: flex;
   justify-content: flex-end;
- 
+
 
 }
 
-.name>p, .name>h4{
+.name>p,
+.name>h4 {
   margin: 5px;
   padding: 0;
 }
-.name>p{
+
+.name>p {
   color: #68696A;
 }
-.searchBar{
+
+.searchBar {
   background-color: #3b3e41;
   width: 90%;
   height: 50px;
@@ -115,7 +127,7 @@
 
 }
 
-.categories{
+.categories {
 
   display: flex;
   flex-direction: row;
@@ -123,13 +135,15 @@
   justify-content: space-evenly;
   margin-top: 20px;
 }
-.profiles{
+
+.profiles {
   margin-top: 50px;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
 }
-.cat{
+
+.cat {
   width: min(100px, 30vw);
   background-color: #111115;
   display: flex;
@@ -141,9 +155,10 @@
   padding: 5px;
 }
 
-.cat > p{
+.cat>p {
   font-size: min(12px, 2.4vw);
 }
+
 .cat:active {
   background: #68696A;
 }
@@ -153,45 +168,48 @@
 }
 
 @media (max-width: 1240px) {
- .container{
-  flex-direction: column;
-  align-items: center;
-  margin: auto;
-  width: 95vw;
- }
- .sidePanel {
-  height:60px;
-  width: 100%;
-  background-color: #111115;
-  /* border-radius: .6rem; */
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  align-items: center;
-  margin:auto;
-  margin-top: 20px;
-  padding: 0;
-}
+  .container {
+    flex-direction: column;
+    align-items: center;
+    margin: auto;
+    width: 95vw;
+  }
 
-.searchContainer{
-  width: 95%;
-  background-color: #111115;
-  border-radius: .6rem;
-  margin:auto;
-  margin-top: 20px;
-}
-.categories{
-  display: flex;
-  flex-direction: row;
-  width: 90vw;
-  justify-content: left;
-  margin: auto;
-  margin-top: 20px;
-  
-}
-.nav{
-  width: 100vw;
-  margin: 0;
-  padding: 0;
-}
+  .sidePanel {
+    height: 60px;
+    width: 100%;
+    background-color: #111115;
+    /* border-radius: .6rem; */
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    margin: auto;
+    margin-top: 20px;
+    padding: 0;
+  }
+
+  .searchContainer {
+    width: 95%;
+    background-color: #111115;
+    border-radius: .6rem;
+    margin: auto;
+    margin-top: 20px;
+  }
+
+  .categories {
+    display: flex;
+    flex-direction: row;
+    width: 90vw;
+    justify-content: left;
+    margin: auto;
+    margin-top: 20px;
+
+  }
+
+  .nav {
+    width: 100vw;
+    margin: 0;
+    padding: 0;
+  }
 }
