--- a/src/components/HomePageCSS/slug.module.css
+++ b/src/components/HomePageCSS/slug.module.css
@@ -46,6 +46,7 @@ flex-direction: column;
     margin-top: 20px;
     font-size: min(12px, 2vw);
     margin:auto;
+    text-transform: uppercase;
   }
 
   .DetailsContacts h4{
@@ -53,6 +54,7 @@ flex-direction: column;
     padding: 0;
     margin: 0;
     margin-top: 10px;
+  
   }
 
   .Contacts div p{
@@ -98,6 +100,10 @@ flex-direction: column;
     word-break: keep-all;
     word-wrap: none;
     margin: 0 10px;
+  }
+
+  .btn:active{
+    background: #4d4c4c;
   }
 
   .BtnImage{
