--- a/src/components/Settings/SettingsCSS/settingsCat.module.css
+++ b/src/components/Settings/SettingsCSS/settingsCat.module.css
@@ -14,6 +14,10 @@
     margin: 5px;
 }
 
+.Container:active{
+    background: #787979
+}
+
 .Container .Name{
     font-size: min(3vw, 15px);
     margin: 0;
