--- a/src/components/HomePageCSS/topPannel.module.css
+++ b/src/components/HomePageCSS/topPannel.module.css
@@ -16,7 +16,7 @@
     position: relative;
     width: fit-content;
     margin: auto;
-    
+    color: #000;
   
   }
   .sideIcon{
@@ -41,7 +41,7 @@
   }
 
   .TableHolder h1{
-
+    color: #000;
     text-align: center;
   }
 
@@ -51,6 +51,7 @@
     text-align: center;
     margin: auto;
     margin-bottom: 30px;
+    color: #000;
   }
   .profiles{
     margin-top: 50px;
@@ -115,12 +116,14 @@
   }
 .arrive td{
   width: 50%;
+  color: #000;
   
 }
 
   .data td{
     font-size: min(3vw, 14px);
     text-align: center;
+    color: #000;
     padding:10px;
 
   }
@@ -139,6 +142,7 @@
     font-size: min(3vw, 14px);
     width: 400px;
     text-align: center;
+    color: #000;
 
   }
 
@@ -148,6 +152,7 @@
 
   .headingNames td{
     font-size: min(3vw, 16px);
+    color: #000;
  
   }
   .subHeadings td {
@@ -155,6 +160,7 @@
     font-size: min(3vw, 13px);
     margin: 10px;
     padding: 12px;
+    color: #000;
 
   }
   .headers td{
@@ -165,6 +171,7 @@
     width: min(100px, 3vw);
     margin: auto;
     text-align: right;
+    color: #000;
  
   }
   .credecials td{
