--- a/src/components/HomePageCSS/login.module.css
+++ b/src/components/HomePageCSS/login.module.css
@@ -63,7 +63,7 @@
 .Steps .Inputs{
     padding: 20px;
     width: 95%;
-    color: #68696A;
+    color: #ececec;
     background: #111115;
     outline: none;
     border: none;
