--- a/src/components/HomePageCSS/slug.module.css
+++ b/src/components/HomePageCSS/slug.module.css
@@ -15,9 +15,9 @@ flex-direction: column;
     border-radius: 50%;
     width: 120px;
     height: 120px;
-    /* background-image: url("https://i.ibb.co/kgYVkc0/IMG-20220723-195959.jpg"); */
+    background-image: url("https://i.ibb.co/Bch295F/Frame-169.png");
     background-position: center;
-    background: #03a4ff;
+    /* background: #03a4ff; */
     background-clip: border-box;
     background-repeat: no-repeat;
     background-size: cover;
@@ -25,6 +25,7 @@ flex-direction: column;
     display: flex;
     align-items: center;
     justify-content: center;
+    border: 1px solid #03a4ff;
   }
   
   .DetailsHolder{
