--- a/src/components/HomePageCSS/ThemedHomeCSS/login.module.css
+++ b/src/components/HomePageCSS/ThemedHomeCSS/login.module.css
@@ -1,13 +1,8 @@
-.Body{
-    background: #ffffff;
-    color: #111115;
-}
 .container{
     width: min(1440px, 100vw);
     display: flex;
     flex-direction: column;
     padding-bottom: 70px;
-    background-color: #FFFFFF;
     }
     .textHolder{
         margin: auto;
@@ -15,9 +10,6 @@
 .textHolder h1{
     font-size: min(55px, 5vw);
 
-}
-.textHolder h1 span{
-    color: #03a4ff;
 }
 
 .BodyCont{
@@ -27,37 +19,19 @@
 
 .Images{
     position: relative;
-    width: 45%;
-}
-.Button{
-    background-color: #03a4ff;
-    font-size: min(14px, 4vw);
-    width: 240px;
-    height: 50px;
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 5px;
-    cursor: pointer;
-    margin: 0px auto;
-    border: none;
-    
-}
-.Button:active{
-    background: #a9d4ff;
+    width: 40%;
 }
 
 .image1{
     width: 500px;
     position: absolute;
     background: transparent;
-    background-image: url("https://i.ibb.co/6JC28LS/Light-Dash-One.png");
+    background-image: url("https://i.ibb.co/wBcXpQq/Scan-AImage1.png");
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
     height: 580px;
     left: 30px;
-    top: 30px;
     z-index: 0;
     border-radius: 10px;
 }
@@ -65,28 +39,19 @@
     width: 200px;
     position: absolute;
     height: 430px;
-    background-image: url("https://i.ibb.co/d0RnC4s/Light-App-One.png");
+    background-image: url("https://i.ibb.co/JcLWG2v/Scan-AImage3.png");
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
-    left: 380px;
-    top: 260px;
+    left: 300px;
+    top: 160px;
     border-radius: 10px;
 }
 
 .formHolder{
     position: relative;
     width: 50%;
-
-}
-.formHolder span{
-    font-size: 10px;
-    margin-bottom: 20px;
-    color: #ff879b;
-}
-
-.formHolder input::placeholder{
-    font-size: 13px;
+    margin-top: 60px;
 }
 
 .Steps {
@@ -95,12 +60,12 @@
 
 }
 
-.Steps input{
+.Steps .Inputs{
     padding: 20px;
-    width: 90%;
-    color: #111115;
-    background: #f7f7f7;
-    outline: 1px solid #03a4ff;
+    width: 95%;
+    color: #ececec;
+    background: #111115;
+    outline: none;
     border: none;
     border-radius: 5px;
     font-size: min(16px, 3vw);
@@ -109,4 +74,25 @@
 
 .Steps label{
     margin-bottom: 10px;
+}
+
+.LoginBtn{
+    background-color: #111115;
+    font-size: min(14px, 4vw);
+    width: 140px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
+    cursor: pointer;
+    align-self: flex-end;
+    padding: 0;
+    border: none;
+
+}
+
+.LoginBtn:active{
+    color: #111115;
+    background: #ffffff;
 }
