--- a/src/components/HomePageCSS/ThemedHomeCSS/signup.module.css
+++ b/src/components/HomePageCSS/ThemedHomeCSS/signup.module.css
@@ -1,13 +1,8 @@
-.Body{
-    background: #ffffff;
-    color: #111115;
-}
 .container{
     width: min(1440px, 100vw);
     display: flex;
     flex-direction: column;
     padding-bottom: 70px;
-    background-color: #FFFFFF;
     }
     .textHolder{
         margin: auto;
@@ -15,9 +10,6 @@
 .textHolder h1{
     font-size: min(55px, 5vw);
 
-}
-.textHolder h1 span{
-    color: #03a4ff;
 }
 
 .BodyCont{
@@ -27,10 +19,10 @@
 
 .Images{
     position: relative;
-    width: 45%;
+    width: 40%;
 }
 .Button{
-    background-color: #03a4ff;
+    background-color: #111115;
     font-size: min(14px, 4vw);
     width: 240px;
     height: 50px;
@@ -44,20 +36,19 @@
     
 }
 .Button:active{
-    background: #a9d4ff;
+    background: #68696A;
 }
 
 .image1{
-    width: 500px;
+    width: 400px;
     position: absolute;
     background: transparent;
-    background-image: url("https://i.ibb.co/6JC28LS/Light-Dash-One.png");
+    background-image: url("https://i.ibb.co/wBcXpQq/Scan-AImage1.png");
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
-    height: 580px;
+    height: 480px;
     left: 30px;
-    top: 30px;
     z-index: 0;
     border-radius: 10px;
 }
@@ -65,12 +56,12 @@
     width: 200px;
     position: absolute;
     height: 430px;
-    background-image: url("https://i.ibb.co/d0RnC4s/Light-App-One.png");
+    background-image: url("https://i.ibb.co/JcLWG2v/Scan-AImage3.png");
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
-    left: 380px;
-    top: 260px;
+    left: 300px;
+    top: 160px;
     border-radius: 10px;
 }
 
@@ -82,7 +73,7 @@
 .formHolder span{
     font-size: 10px;
     margin-bottom: 20px;
-    color: #ff879b;
+    color: pink;
 }
 
 .formHolder input::placeholder{
@@ -98,9 +89,9 @@
 .Steps input{
     padding: 20px;
     width: 90%;
-    color: #111115;
-    background: #f7f7f7;
-    outline: 1px solid #03a4ff;
+    color: white;
+    background: #111115;
+    outline: none;
     border: none;
     border-radius: 5px;
     font-size: min(16px, 3vw);
