--- a/src/components/HomePageCSS/login.module.css
+++ b/src/components/HomePageCSS/login.module.css
@@ -1,3 +1,8 @@
+.Body{
+    background: #ffffff;
+    color: #111115;
+}
+
 .container{
     width: min(1440px, 100vw);
     display: flex;
@@ -8,8 +13,11 @@
         margin: auto;
     }
 .textHolder h1{
-    font-size: min(55px, 5vw);
+    font-size: min(78px, 5vw);
+}
 
+.textHolder h1 span{
+    color: #03a4ff;
 }
 
 .BodyCont{
@@ -19,14 +27,14 @@
 
 .Images{
     position: relative;
-    width: 40%;
+    width: 45%;
 }
 
 .image1{
     width: 500px;
     position: absolute;
     background: transparent;
-    background-image: url("https://i.ibb.co/wBcXpQq/Scan-AImage1.png");
+    background-image: url("https://i.ibb.co/6JC28LS/Light-Dash-One.png");
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
@@ -39,18 +47,18 @@
     width: 200px;
     position: absolute;
     height: 430px;
-    background-image: url("https://i.ibb.co/JcLWG2v/Scan-AImage3.png");
+    background-image: url("https://i.ibb.co/d0RnC4s/Light-App-One.png");
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
-    left: 300px;
-    top: 160px;
+    left: 360px;
+    top: 200px;
     border-radius: 10px;
 }
 
 .formHolder{
     position: relative;
-    width: 50%;
+    width: 45%;
     margin-top: 60px;
 }
 
@@ -62,10 +70,11 @@
 
 .Steps .Inputs{
     padding: 20px;
+  
     width: 95%;
-    color: #ececec;
-    background: #111115;
-    outline: none;
+    color: #111115;
+    background: #f7f7f7;
+    outline: 1px solid #03a4ff;
     border: none;
     border-radius: 5px;
     font-size: min(16px, 3vw);
@@ -77,7 +86,8 @@
 }
 
 .LoginBtn{
-    background-color: #111115;
+    background-color: #03a4ff;
+    color: #ffffff;
     font-size: min(14px, 4vw);
     width: 140px;
     height: 50px;
