--- a/src/components/HomePageCSS/modal.module.css
+++ b/src/components/HomePageCSS/modal.module.css
@@ -23,6 +23,7 @@
 .container .Button {
     margin-top: 40px;
     background-color: #0582ff;
+    color: #ffffff;
     width: 80%;
     height: 20px;
     padding: 10px;
