--- a/src/components/HomePageCSS/Loader.module.css
+++ b/src/components/HomePageCSS/Loader.module.css
@@ -4,6 +4,7 @@
     align-items: center;
     width: 100%;
     height: 100vh;
+    background-color: #FFFFFF;
 }
 @keyframes scaner {
     0% {
@@ -73,23 +74,23 @@
   height: 240px;
   border-radius: 50%;
   margin-top: 11px;
-  background-image: url("https://i.ibb.co/q5yfsdC/Frame-170.png");
+  background-image: url("https://i.ibb.co/n6fGy6f/Logo-Acna.png");
   background-size:contain;
   background-position: center;
   background-repeat: no-repeat;
   
 }
-
+/* 
 .cont{
   width: fit-content;
   height: 100px;
-  border: 1px solid #00c3ff42;
+  border: 2px solid #00c3ff;
   display: flex;
   justify-content: center;
   align-items: center;
   position: relative;
   border-radius: 5px;
-}
+} */
 
 @keyframes scan{
   0%{
@@ -102,7 +103,7 @@
 }
 .cont{
     width: min(300px, 80vw);
-    border: 1px solid #00c3ff42;
+    border: 1px solid #00a2ff;
     display: flex;
     height: 100px;
     justify-content: center;
