--- a/src/components/HomePageCSS/home.module.css
+++ b/src/components/HomePageCSS/home.module.css
@@ -94,7 +94,17 @@
     height: 700px;
     position: relative;
 }
-
+.dashProfile{
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    margin-top: 10px;
+    background-image: url("https://i.ibb.co/4T4yVwF/LOGO.png");
+    background-size:contain;
+    background-position: center;
+    background-repeat: no-repeat;
+    
+  }
 .image1{
     width: 500px;
     position: absolute;
@@ -117,7 +127,7 @@
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
-    top: 330px;
+    top: 300px;
     left: 460px;
     border-radius: 10px;
 }
