--- a/src/components/HomePageCSS/topPannel.module.css
+++ b/src/components/HomePageCSS/topPannel.module.css
@@ -1,7 +1,7 @@
 .sidePanel {
   height:60px;
   width: 95%;
-  background-color: #111115;
+  background-color: #C9E3F5;
   border-radius: .6rem;
   display: flex;
   flex-direction: row;
