--- a/src/components/HomePageCSS/dashProfile.module.css
+++ b/src/components/HomePageCSS/dashProfile.module.css
@@ -1,53 +1,133 @@
-.container{
-    width: 280px;
-    height: 120px;
-    background-color: #111115; 
-    border-radius: 10px;
-    display: flex;
-    flex-direction: row;
-    justify-content: left;
-    cursor: pointer;
-    margin-right: 20px;
-    margin-bottom: 20px;
-    padding-right: 5px;
-    
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap');
+.Tri{
+    position: absolute;
+    top:50%;
+    transform: translate(-50%, -50%);
+    right: 0;
 }
-
 .profileImage{
     background: #03a4ff;
-    width: 40%;
-    height: 100%;
+    width: 59px;
+    height: 75px;
     margin-right: 10px;
-    border-top-left-radius: 10px;
-    border-bottom-left-radius: 10px;
     position: relative;
     background-image: url("");
     background-position: center;
     background-clip: border-box;
     background-repeat: no-repeat;
     background-size: cover;
+    left: 30px;
+    border: 1px solid #04A3FF;
+    border-radius: 1px;
+    
+}
+.details{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    flex-shrink: 0;
+}
+.details h2{
+    font-size: 10px;
+    font-weight: bold;
+    width: 85%;
+    text-align: center;
+    text-transform: uppercase;
+    font-family: "Inter";
+}
+.cardDetails{
+    display: flex;
+    flex-direction: row;
+    flex-shrink: 0;
+    align-items: flex-start;
+}
+
+.profileDetails{
+    margin-left: 30px;
 }
 
 .profileDetails > p{
-    font-size: min(14px, 3vw);
-    color:#68696A;
+    font-size: min(7px, 3vw);
     text-transform: uppercase;
+    font-weight: bold;
+    width: 100px;
+}
+.profileDetails > .Name{
+    font-size: min(9px, 3vw);
+    text-transform: uppercase;
+    font-weight: bold;
+    width: 100px;
+}
+.profileDetails > p{
+    font-size: min(7px, 3vw);
+    text-transform: uppercase;
+    font-weight: bold;
+    width: 110px;
 }
 
 .profileDetails h4{
     font-weight: 900;
-    font-size: min(14px, 4vw);
+    font-size: min(10px, 4vw);
     text-transform: uppercase;
+    border-bottom: 2px solid #04A3FF;
+    text-align: center;
+    width: 100px;
+    padding-bottom: 5px;
 }
 
 .Links{
     text-decoration: none;
     color: inherit;
+    width: fit-content;
+    height: fit-content;
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
+    cursor: pointer;
+    margin-bottom: 20px;
+    position: relative;
+    border: 1px solid #03a4ff;
+    padding: 5px;
+    background: #FFFFFF;
 }
-
+.lineOne{
+width: 55.321px;
+height: 0px;
+transform: rotate(54.907deg);
+flex-shrink: 0;
+border-bottom: 1px solid #111115;
+position: absolute;
+bottom: 35px;
+left: 0;
+}
+.lineTwo{
+width: 57.321px;
+height: 0px;
+transform: rotate(54.907deg);
+flex-shrink: 0;
+border-bottom: 1px solid #111115;
+position: absolute;
+bottom: 35px;
+left: 3px;
+}
+.lineT{
+width: 22.672px;
+height: 0px;
+transform: rotate(42.424deg);
+flex-shrink: 0;
+border-bottom: 1px solid #111115;
+position: absolute;
+top: 39px;
+right: 46px;
+}
 .Links:visited{
     color: inherit;
 }
+
+
+
 
 @media (max-width: 1240px) {
     .container{
