--- a/src/components/HomePageCSS/homePage.module.css
+++ b/src/components/HomePageCSS/homePage.module.css
@@ -1,7 +1,7 @@
 .sidePanel {
-    height: min(85vh, 500px);
+    height: min(85vh, 600px);
     width: min(4vw, 106px);
-    background-color: #111115;
+    background-color: #C9E3F5;
     border-radius: .6rem;
     display: flex;
     flex-direction: column;
@@ -9,7 +9,6 @@
     align-items: center;
     padding-top: 50px;
     margin-top: 20px;
-    margin-right: 30px;
     margin-left: 10px;
   }
   
@@ -38,6 +37,7 @@
     outline: none;
     border: none;
     margin-left: 10px;
+    color: #111115;
   }
   
   .searchBar>input::placeholder {
@@ -50,22 +50,22 @@
   }
   
   .searchContainer {
-    width: 95%;
+    width: 100%;
     height: 200px;
-    background-color: #111115;
+    background-color: #C9E3F5;
     border-radius: .6rem;
-    margin-right: 20px;
     margin-top: 20px;
     position: relative;
   }
   
   .container {
     position: relative;
-    width: 100%;
+    width: min(1440px, 100vw);
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-  
+    color: #111115;
+    background-color: #FFFFFF;
   }
   
   .nav {
@@ -117,7 +117,7 @@
   }
   
   .searchBar {
-    background-color: #3b3e41;
+    background-color: #F0F1FF;
     width: 90%;
     height: 50px;
     margin: auto;
@@ -139,11 +139,33 @@
   }
   
   .profiles {
+    width: 90%;
+    margin: auto;
     margin-top: 50px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
+    display: grid;
+     justify-content: center; /* Center the grid horizontally */
+    grid-template-columns: repeat(4, 1fr); /* Initially, 4 columns */
+    gap: 10px;
   }
+
+  @media screen and (max-width: 1038px) {
+  .profiles {
+    grid-template-columns: repeat(3, 1fr); /* Change to 2 columns on smaller screens */
+  }
+}
+  @media screen and (max-width: 768px) {
+  .profiles {
+    grid-template-columns: repeat(2, 1fr); /* Change to 2 columns on smaller screens */
+  }
+}
+
+
+/* Media query for even smaller screens */
+@media screen and (max-width: 516px) {
+  .profiles {
+    grid-template-columns: 1fr; /* Single column on the smallest screens */
+  }
+}
   .logOut{
     position: absolute;
     right: 30px;
@@ -186,7 +208,6 @@
     .sidePanel {
       height: 60px;
       width: 100%;
-      background-color: #111115;
       /* border-radius: .6rem; */
       display: flex;
       flex-direction: row;
@@ -199,7 +220,6 @@
   
     .searchContainer {
       width: 95%;
-      background-color: #111115;
       border-radius: .6rem;
       margin: auto;
       margin-top: 20px;
@@ -220,4 +240,5 @@
       margin: 0;
       padding: 0;
     }
+   
   }
