--- a/src/components/HomePageCSS/Loader.module.css
+++ b/src/components/HomePageCSS/Loader.module.css
@@ -4,7 +4,7 @@
     align-items: center;
     width: 100%;
     height: 100vh;
-    background-color: #FFFFFF;
+    background-color: #fafafa;
 }
 @keyframes scaner {
     0% {
