--- a/src/components/HomePageCSS/homePage.module.css
+++ b/src/components/HomePageCSS/homePage.module.css
@@ -1,7 +1,7 @@
 .sidePanel {
     height: min(85vh, 600px);
     width: min(4vw, 106px);
-    background-color: #C9E3F5;
+    background-color: #acd7f5;
     border-radius: .6rem;
     display: flex;
     flex-direction: column;
@@ -13,11 +13,13 @@
   }
   
   .sideIcon {
-    width: min(20px, 5vw);
-    height: min(20px, 5vw);
+    width: min(25px, 5vw);
+    height: min(25px, 5vw);
     background: transparent;
     margin: 20px 0;
     position: relative;
+    fill: #03a4ff;
+    stroke: #03a4ff;
   }
   
   .searchIcon {
@@ -27,7 +29,7 @@
     margin: 20px 0;
     position: relative;
     margin-left: 20px;
-  
+    fill: #111115;
   }
   
   .searchBar>input {
@@ -46,13 +48,13 @@
   
   .sideIcon:hover {
     cursor: pointer;
-    border-radius: 100px;
+  
   }
   
   .searchContainer {
     width: 100%;
     height: 200px;
-    background-color: #C9E3F5;
+    background-color: #acd7f5;
     border-radius: .6rem;
     margin-top: 20px;
     position: relative;
@@ -65,7 +67,7 @@
     flex-direction: row;
     justify-content: space-evenly;
     color: #111115;
-    background-color: #FFFFFF;
+    background-color: #fafafa;
   }
   
   .nav {
@@ -89,12 +91,12 @@
     border-radius: 100%;
     width: 80px;
     height: 80px;
-    background: #0f0f14;
-    background-image: url("https://i.ibb.co/Bch295F/Frame-169.png");
+    /* background: #0f0f14; */
+    background-image: url("https://i.ibb.co/4T4yVwF/LOGO.png");
     background-position: center;
     background-clip: border-box;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: contain;
     margin-right: 10px;
   }
   
@@ -115,7 +117,12 @@
   .name>p {
     color: #68696A;
   }
-  
+  .logOut{
+    width: 25px;
+    height: 25px;
+    fill: rgb(253, 100, 100);
+
+    }
   .searchBar {
     background-color: #F0F1FF;
     width: 90%;
