--- a/src/components/HomePageCSS/topPannel.module.css
+++ b/src/components/HomePageCSS/topPannel.module.css
@@ -1,7 +1,8 @@
 .sidePanel {
   height:60px;
   width: 95%;
-  background-color: #C9E3F5;
+  background-color: #acd7f5;
+  
   border-radius: .6rem;
   display: flex;
   flex-direction: row;
@@ -11,17 +12,26 @@
   margin-top: 20px;
   padding: 0;
 }
-
+.content{
+  width: min(1440px, 100vw);
+  margin: auto;
+}
   .Table{
     position: relative;
-    width: 100vw; 
+    width: min(1440px, 100vw);
+    margin: auto;
+    background-color: #fafafa;
+    color: #111115
   }
-  .sideIcon{
-    width: min(20px , 4vw);
-    height:  min(20px , 4vw);
+  .sideIcon {
+    width: min(25px, 5vw);
+    height: min(25px, 5vw);
     background: transparent;
     position: relative;
+    fill: #03a4ff;
+    stroke: #03a4ff;
   }
+  
   .sideIcon:hover{
     cursor: pointer;
     border-radius: 100px;
@@ -93,7 +103,8 @@
     margin: auto;
     overflow-x:scroll;
     padding-bottom: 20px;
-    width: 100vw;
+ width: min(100vw, 1440px);
+    margin: auto;       
   }
 .arrive td{
   width: 50%;
@@ -145,6 +156,7 @@
     width: 90%;
     margin: 40px auto 10px auto;
     justify-content: space-between;
+    color: #ffffff;
   }
   .buttons{
     padding: 0px 15px;
@@ -162,6 +174,7 @@
 }
   .Date{
     font-size: min(13px, 4vw);
+    color: #111115
   }
 
   /* //////////////////////// */
@@ -180,7 +193,7 @@
     outline: none;
     border: none;
     border-radius: 4px;
-    background-color: #111115;
+   
     border: none;
     outline: none;
 }
