--- a/src/components/Settings/SettingsCSS/add-member.module.css
+++ b/src/components/Settings/SettingsCSS/add-member.module.css
@@ -1,23 +1,29 @@
 .container{
-    width: min(98vw, 1080px);
+   
     margin: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
-
+    background: #f5f5f5;
+    color: #111115;
 }
-
+.Form{
+    width: min(98vw, 1080px);
+}
 .coordinates{
+
     width: 100%;
 }
 .coordinates > input{
-    padding: 10px;
-    width: 100%;
-    background: #111115;
-    outline: none;
+    padding: 20px;
+    width: 95%;
+    color: #111115;
+    background: #f7f7f7;
+    outline: 1px solid #03a4ff;
     border: none;
     border-radius: 5px;
     font-size: min(16px, 3vw);
+    margin-bottom: 20px;
 }
 
 .formHolder{
@@ -127,10 +133,10 @@
    
 }
 .containerProfile{
-    width: 280px;
+    width: 350px;
     height: 140px;
     padding-top: 20px;
-    background-color: #111115; 
+    background-color: #ffffff; 
     border-radius: 10px;
     display: flex;
     flex-direction: row;
@@ -138,7 +144,7 @@
     cursor: pointer;
     margin-right: 20px;
     margin-bottom: 20px;
-    padding-left: 10px;
+    padding-left: 20px;
     position: relative;
 }
 
@@ -159,7 +165,7 @@
 
 .profileDetails > p{
     font-size: min(14px, 3vw);
-    color:#68696A;
+    color:#111115;
     text-transform: uppercase;
 
 }
@@ -180,7 +186,8 @@
     margin: 0;
     font-size: min(10px, 3vw);
     padding: 5px;
-    background: #171a1d;
+
+    color: #050505;
     width: 60px;
     text-align: center;
     position: absolute;
