--- a/src/components/Settings/SettingsCSS/location.module.css
+++ b/src/components/Settings/SettingsCSS/location.module.css
@@ -4,7 +4,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-
+    background-color: #f5f5f5;
+    color: #111115;
 }
 
 .intro{
@@ -12,32 +13,36 @@
     margin:30px auto;
     text-align: center;
     font-size: min(22px, 4vw);
-    color: #68696A;
+    color: #111115;
 }
 .formHolder{
     width: 100%;
 }
 .coordinates > input{
     padding: 20px;
-    width: min(85vw, 1080px);
-    color: #adb0b3;
-    background: #111115;
-    outline: none;
+    width: 95%;
+    color: #111115;
+    background: #f7f7f7;
+    outline: 1px solid #03a4ff;
     border: none;
     border-radius: 5px;
     font-size: min(16px, 3vw);
+    margin-bottom: 20px;
 }
 .submit{
-    padding: 20px;
-    width: 20%;
-    color: #68696A;
-    background: #111115;
-    outline: none;
-    border: none;
+    background-color: #03a4ff;
+    color: #ffffff;
+    font-size: min(14px, 4vw);
+    width: 140px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     border-radius: 5px;
-    font-size: min(16px, 3vw);  
-    text-align: center;
     cursor: pointer;
+    align-self: flex-end;
+    padding: 0;
+    border: none;
    
 }
 .submit:active{
