--- a/src/components/Settings/SettingsCSS/update-members.module.css
+++ b/src/components/Settings/SettingsCSS/update-members.module.css
@@ -27,6 +27,37 @@
     flex-direction: row;
     justify-content: center;
   }
+  .searchBar {
+    background-color: #dadada;
+    width: 90%;
+    height: 50px;
+    margin: auto;
+    margin-top: 20px;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+  
+  }
+  .searchIcon {
+    width: min(20px, 4vw);
+    height: min(20px, 4vw);
+    background: transparent;
+    margin: 20px 0;
+    position: relative;
+    margin-left: 20px;
+    stroke: #111115;
+  }
+  
+  .searchBar>input {
+    width: 95%;
+    height: 75%;
+    background: transparent;
+    outline: none;
+    border: none;
+    margin-left: 10px;
+    color: #111115;
+  }
   .cat{
     padding: 5px 14px;
     background-color: #111115;
@@ -44,8 +75,8 @@
   /* ///////////////////////////// */
 
   .containerProfile{
-    width: 290px;
-    height: 120px;
+    width: 300px;
+    height: 190px;
     background-color: #111115; 
     border-radius: 10px;
     display: flex;
@@ -72,10 +103,13 @@
 }
 
 .profileDetails > p{
-    font-size: min(14px, 3vw);
-    color:#68696A;
+    font-size: min(12px, 3vw);
+    color:#cccccc;
 }
-
+.profileDetails ol li {
+    font-size: min(12px, 3vw);
+    color:#cccccc;
+}
 .Links{
     text-decoration: none;
     color: inherit;
@@ -86,10 +120,10 @@
     position: absolute;
     width: 200px;
     height: fit-content;
-    background: #111115;
+    background: #2a2a31;
     z-index: 2;
     top: 25px;
-    left: 30%;
+    left: 40%;
     display: none;
     border-radius: 2px;
     box-shadow: 2px 2px 5px 2px #000000;
@@ -108,7 +142,7 @@
 .Option p {
     padding: 5px;
     font-size: min(13px, 3vw);
-    color: #68696A;
+    color: #cececf;
 }
 
 .Option p:hover{
